# AutomaticForkliftVision

./: .gitignore  README.md  camera_new.cpp
Bin_O3D3xx_64b_1.20.75/LightVis/: customui.W64.lvp  customui.ui  multiapp.W64.lvp  multiapp.cfg  simplevis.W64.lvp  svflags.cfg
IFMO3d303/cmake/: rbkPluginConfig.cmake
IFMO3d303/src/: camera.cpp  camera.h
O3D303_SDK_32bit/LightVis/: O3D3xxProc.W32.ppp  simplevis.W32.lvp
O3D303_SDK_64bit/LightVis/: O3D3xxCamera.W64.pap  O3D3xxProc.W64.ppp  simplevis.cfg  simplevis3d.W64.lvp
PCL_Projects/: VS配置.txt  downsample.txt  filter_output.pcd  pallet.pcd  pallet_2.pcd  ransac_output.pcd  zhanban.pcd  zhanban.stl
PCL_Projects/Convert/: Convert.sln
PCL_Projects/FastPointFeatureHistogram/: FastPointFeatureHistogram.sln
PCL_Projects/Filter/: Filter.sln
PCL_Projects/Filter2/: Filter2.sln
PCL_Projects/Filter3/: Filter3.sln
PCL_Projects/NARF_Feature_Extraction/: NARF_Feature_Extraction.sln
PCL_Projects/NormalDistributionsTransform/: NormalDistributionsTransform.sln
PCL_Projects/RANSAC/: RANSAC.sln
PCL_Projects/Segmentation/: Segmentation.sln
PCL_Projects/Test2/: Test2.sln
PCL_Projects/Test3/: CMakeLists.txt
PCL_Projects/Test4/: Test4.sln
PCL_Projects/V0.1/: PCL180.props
PCL_Projects/V0.2/: V0.2.sln
PCL_Projects/b_spline/: b_spline.sln
PCL_Projects/border/: border.sln
PCL_Projects/border2/: border2.sln
PCL_Projects/delete_ground/: delete_ground.sln
PCL_Projects/main/: main.sln
PCL_Projects/match/: match.sln
PCL_Projects/narf_feature/: narf_feature.sln
PCL_Projects/pass_through_filter/: pass_through_filter.sln
PCL_Projects/pca/: pca.sln
PCL_Projects/region_growing/: region_growing.sln
PCL_Projects/rotate/: rotate.sln
PCL_Projects/surface_rebuild/: surface_rebuild.sln
PCL_Projects/voxel_grid/: voxel_grid.sln
Plugin/: CMakeLists.txt  README.md
Plugin/src/: camera.cpp  camera.h
SDK.bak/code/: CMakeLists.txt
SDK.bak/code/processing_plugin/: CMakeLists.txt
SDK.bak/code/processing_plugin/src/: README.TXT
SDK.bak/code/samples/: CMakeLists.txt
SDK.bak/code/samples/src/: README.TXT
SDK.bak/code/tests/: CMakeLists.txt
SDK.bak/code/tests/src/: README.TXT  o3d3xx_camera_tests.cpp
cmake_projects/test_camera/include/source_plugin/: CMakeLists.txt
data_process/: 1.html  1.pcd  2.html  2.pcd  3.html  3.pcd  3D-Point-Cloud-2.html  3D-Point-Cloud-3.html  3D-Point-Cloud-4.html  3D-Point-Cloud-5.html  3D-Point-Cloud-6.html  3D-Point-Cloud-V1.html  3D-Point-Cloud-V2.html  3D-Point-Cloud-d1.html  3D-Point-Cloud-d2.html  3D-Point-Cloud.html  4.html  4.pcd  5.html  5.pcd  6.html  6.pcd  d1.pcd  d2.pcd  data.pcd  data.txt  data2.pcd  data2.txt  data3.txt  data4.txt  data5.txt  data6.txt  data_process.py  data_process_V2.py
pallet/: pallet.SLDDRW  pallet.SLDPRT  pallet.STEP  pallet.STL  pallet.x_t
robokit/: .gitignore  README.md
robokit.bak/: .gitattributes  .gitignore  CMakeLists.txt  linuxToolChain.cmake  version
robokit.bak/batchs/: build_vs2010.bat  build_vs2015_x64.bat  build_vs2015_x86.bat  clean_vs2010.bat  cmake_vs2010.bat  cmake_vs2015_x64.bat  make_vs2010.bat  make_vs2015_x86.bat  proto.bat  rebuild_vs2015_x86.bat
robokit.bak/bin64/: robot.cp.default
robokit.bak/bin64/lua_scripts/connection/: FullFeature.lua
robokit.bak/cmake/: CompilerFlags.cmake  FindSQLite3.cmake  FindUrg.cmake  GetProtobuf.cmake  GetSubprojectStatus.cmake  VersionResource.rc  generate_product_version.cmake  rbkConfig.cmake  version.cmake
robokit.bak/proto/: CanFrame.options  message_battery.proto  message_chassisconfig.options  message_collisionswitch.proto  message_debug.proto  message_dispatcher.proto  message_encoder.proto  message_environment.proto  message_error.proto  message_face.proto  message_fallingdown.proto  message_fork.proto  message_geometry.proto  message_header.proto  message_infrared.proto  message_laser.proto  message_magnetic.proto  message_map.proto  message_navigation.proto  message_object.proto  message_pantilttask.proto  message_plugin.proto  message_pointcloud.proto  message_rfid.proto  message_rpc.proto  message_tcs_comm.proto  message_tts.proto  message_ultrasonic.proto  message_voice.proto  message_voicerec.proto
robokit.bak/src/robokit/chasis/: model.h
robokit.bak/src/robokit/core/: dlibrary.h  error.h  error_code_define.h  interface.h  loader.h  lua_reader.h  lua_wrapper.h  meminfo.h  param.h  provider.h  rbk_core.h  runtime_data_db.h  sleep.h  sqlite.h  threadpool.hpp  timer.h
robokit.bak/src/robokit/core/ros_msg/geometry_msgs/: Point.h  PolygonStamped.h  Pose.h  PoseArray.h  PoseStamped.h  PoseWithCovariance.h  Quaternion.h  QuaternionStamped.h  TransformStamped.h  TwistWithCovariance.h  Vector3Stamped.h
robokit.bak/src/robokit/core/ros_msg/nav_msgs/: MapMetaData.h  OccupancyGrid.h  Odometry.h  Path.h
robokit.bak/src/robokit/core/ros_msg/sensor_msgs/: ChannelFloat32.h  PointCloud2.h  PointField.h
robokit.bak/src/robokit/core/ros_msg/std_msgs/: Header.h
robokit.bak/src/robokit/core/ros_msg/visualization_msgs/: Marker.h  MarkerArray.h
robokit.bak/src/robokit/core/time_server/: duration.h  rate.h  rbk_time.h
robokit.bak/src/robokit/core/time_server/impl/: time.h
robokit.bak/src/robokit/foundation/: foundation.h
robokit.bak/src/robokit/foundation/ANN/: ANN.h
robokit.bak/src/robokit/foundation/map_reader/: map_misc.h
robokit.bak/src/robokit/foundation/odometry_calculation/: odometry_calculation.h
robokit.bak/src/robokit/foundation/quadtree/: quadtree.h
robokit.bak/src/robokit/foundation/utils/: color.h  geometry.h  local_map_region.h  pose_se2.h
robokit.bak/src/robokit/main/: WheatyExceptionReport.h  lua_function.h  proto_importer.h
robokit.bak/src/robokit/main/lua_cjson/: fpconv.h  strbuf.c  strbuf.h
robokit.bak/src/robokit/utils/: json.h  serial_port.h  socket.h
robokit.bak/src/robokit/utils/code/: base64.h
robokit.bak/src/robokit/utils/tcp/: tcp_client.h  tcp_server.h
robokit.bak/src/robokit/utils/udp/: udp_client.h  udp_group.h
robokit.bak/thirdparty_libs/luawrapper/: kaguya.hpp
robokit.bak/thirdparty_libs/sqlite3pp/: sqlite3pp.ipp
(+463 files in other folders)
