
# Set the project name
SET(PROJ_NAME "${PROJECT_NAME}Proc")

SET(BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/..")

# Configure the version info file
CONFIGURE_FILE("${BASE_DIR}/third_party/doxygen/version.rc.in" "${CMAKE_CURRENT_BINARY_DIR}/version.rc" @ONLY)

# Set the source and header file lists
SET(CXXSOURCES ${CXXSOURCES}
		 ${CMAKE_CURRENT_SOURCE_DIR}/src/o3d3xxProc.cpp)
		
SET(HXXSOURCES ${HXXSOURCES})

SET(INCLUDE_DIRS ${INCLUDE_DIRS}
		${CMAKE_CURRENT_SOURCE_DIR}/include)
		
INCLUDE_DIRECTORIES(${INCLUDE_DIRS})
	
ADD_LIBRARY(${PROJ_NAME} SHARED
		${CXXSOURCES} ${HXXSOURCES}
		${CMAKE_CURRENT_BINARY_DIR}/version.rc)
			
TARGET_LINK_LIBRARIES(${PROJ_NAME} ${XMLRPC_LIBS} wininet)
			
SET_TARGET_PROPERTIES(${PROJ_NAME} PROPERTIES
		SUFFIX ".W32.ppp")
		
ADD_CUSTOM_COMMAND(TARGET ${PROJ_NAME}  POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E copy
				"${BINARY_OUTPUT_PATH}/$<CONFIGURATION>/${PROJECT_NAME}Proc.W32.ppp"
				"${BINARY_OUTPUT_PATH}/$<CONFIGURATION>/Plugins/${PROJECT_NAME}Proc.W32.ppp"
				)
ADD_CUSTOM_COMMAND(TARGET ${PROJ_NAME}  POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E copy
				"${BINARY_OUTPUT_PATH}/$<CONFIGURATION>/Plugins/${PROJECT_NAME}Proc.W32.ppp"
				"${BINARY_OUTPUT_PATH}/$<CONFIGURATION>/LightVis/${PROJECT_NAME}Proc.W32.ppp"
				)
ADD_CUSTOM_COMMAND(TARGET ${PROJ_NAME}  POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E copy
				"${BINARY_OUTPUT_PATH}/$<CONFIGURATION>/Plugins/${PROJECT_NAME}Proc.W32.ppp"
				"${BINARY_OUTPUT_PATH}/$<CONFIGURATION>/Sample/${PROJECT_NAME}Proc.W32.ppp"
				)	
	#remove the binary from configuration folder 
		ADD_CUSTOM_COMMAND(TARGET ${PROJ_NAME} POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E remove -f
				"${BINARY_OUTPUT_PATH}/$<CONFIGURATION>/${PROJECT_NAME}Proc.W32.ppp")			