#Sample Synchronous client using open source xmlrpc library

# Set the project name
SET(PROJ_NAME "SampleO3D3xxCamera")

# Set the source and header file lists
SET(CXXSOURCES ${CXXSOURCES}
		${CMAKE_CURRENT_SOURCE_DIR}/src/sample.cpp)
 
SET(HXXSOURCES 
		)

SET(INCLUDE_DIRS ${INCLUDE_DIRS}
		${CMAKE_CURRENT_SOURCE_DIR}/include
		${CMAKE_CURRENT_SOURCE_DIR}/../source_plugin/include/)

INCLUDE_DIRECTORIES(${INCLUDE_DIRS})

ADD_EXECUTABLE(${PROJ_NAME}  ${CXXSOURCES} ${HXXSOURCES} )

TARGET_LINK_LIBRARIES(${PROJ_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/../third_party/pmdsdk/lib/pmdaccess2.lib)

ADD_DEPENDENCIES(${PROJ_NAME} ${PROJECT_NAME}Camera ${PROJECT_NAME}Proc)

SET(OUTFILE "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Sample/pmdaccess2.dll")
IF(WIN32)
  IF(NOT ${CMAKE_GENERATOR} STREQUAL "NMake Makefiles")
    SET(OUTFILE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/$<CONFIGURATION>/Sample/pmdaccess2.dll)
  ENDIF()
ENDIF()
	ADD_CUSTOM_COMMAND(TARGET ${PROJ_NAME} POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/../third_party/pmdsdk/bin/pmdaccess2.dll ${OUTFILE} )

	ADD_CUSTOM_COMMAND(TARGET ${PROJ_NAME} POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy "${BINARY_OUTPUT_PATH}/$<CONFIGURATION>/${PROJ_NAME}.exe" "${BINARY_OUTPUT_PATH}/$<CONFIGURATION>/Sample/${PROJ_NAME}.exe ")
	
	ADD_CUSTOM_COMMAND(TARGET ${PROJ_NAME}  POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E copy
				"${BINARY_OUTPUT_PATH}/$<CONFIGURATION>/Plugins/${PROJECT_NAME}Camera.W32.pap"
				"${BINARY_OUTPUT_PATH}/$<CONFIGURATION>/Sample/${PROJECT_NAME}Camera.W32.pap"
				)	
				
	ADD_CUSTOM_COMMAND(TARGET ${PROJ_NAME} POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E remove -f
				"${BINARY_OUTPUT_PATH}/$<CONFIGURATION>/${PROJ_NAME}.exe")
	
